<resources>
    <string name="app_name">PRETEST_IF2_10116060</string>
    <string name="beres_sekarang_kamu_udah_bisa_ngecek_penggunaan_hp_mu_tiap_hari_buat_bantu_kamu_ngatur_waktu">Beres! Sekarang kamu udah bisa ngecek penggunaan HP mu tiap hari buat bantu kamu ngatur waktu:)</string>
    <string name="oke">Oke</string>
    <string name="contoh_budi">Contoh : Budi</string>
    <string name="contoh_12">Contoh : 12</string>
    <string name="nama_panggilan_kamu">Nama Panggilan Kamu</string>
    <string name="umur_kamu">Umur Kamu</string>
    <string name="button">Button</string>
    <string name="ketikan_kode_keluarga_yang_ayah_bunda_miliki_disini">ketikan kode keluarga yang ayah bunda miliki disini</string>
    <string name="belum_punya_kode_keluarga">Belum punya kode keluarga?</string>
    <string name="masuk">Masuk</string>
    <string name="masukan_kode_keluarga">Masukan Kode Keluarga</string>
    <string name="kode_kelurga">Kode Kelurga</string>
    <string name="beli_kode_keluarga_disini">Beli Kode Keluarga Disini</string>
    <string name="monitory_membantu_anda">Monitory Membantu Anda</string>
    <string name="mengontrol_hp_anak">Mengontrol HP Anak</string>
    <string name="todo">TODO</string>
    <string name="mulai">Mulai</string>
    <string name="dengan_menekan_tombol_masuk_berarti_anda_menyetujui">Dengan menekan tombol masuk berarti Anda menyetujui</string>
    <string name="ketentuan_pengguna">Ketentuan Pengguna</string>
    <string name="kebijakan_data">Kebijakan Data</string>
    <string name="kami">kami</string>
    <string name="dan">dan</string>
    <string name="selanjutnya">Selanjutnya</string>
</resources>
